# Document  $Id$
# Summary   Makefile for the chemical-mime-data project.
#
# Copyright (C) 2006 by Daniel Leidert.
#
# This file is free software. The copyright owner gives unlimited
# permission to copy, distribute and modify it.

EXTRA_DIST = \
	cmd_common.xsl \
	cmd_freedesktop_org.xsl \
	cmd_gnome-keys.xsl \
	cmd_gnome-mime.xsl

MAINTAINERCLEANFILES = Makefile.in

