# Document  $Id$
# Summary   Makefile for the chemical-mime-data project.
#
# Copyright (C) 2006,2007 by Daniel Leidert <daniel.leidert@wgdd.de>.
#
# This file is free software. The copyright owner gives unlimited
# permission to copy, distribute and modify it.

EXTRA_DIST = \
	cmd_common.xsl \
	cmd_file-magic.xsl \
	cmd_freedesktop_org.xsl \
	cmd_gnome-keys.xsl \
	cmd_gnome-mime.xsl \
	cmd_kde.xsl \
	cmd_mime_support.xsl \
	cmd_website.xsl \
	cmd_entities.dtd.in

DISTCLEANFILES = cmd_entities.dtd

MAINTAINERCLEANFILES = Makefile.in

