# Document  $Id$
# Summary   Makefile for the chemical-mime-data project.
#
# Copyright (C) 2004-2007 by Daniel Leidert <daniel.leidert@wgdd.de>.
#
# This file is free software. The copyright owner gives unlimited
# permission to copy, distribute and modify it.

EXTRA_DIST = $(pixmaps_list)

MAINTAINERCLEANFILES = Makefile.in

pixmaps_list = gnome-mime-chemical.png chemistry.png


if BOOL_PIXMAPS
pixmapsdir   = $(with_pixmaps)
pixmaps_DATA = $(pixmaps_list)
endif #BOOL_PIXMAPS

