# Document  $Id$
# Summary   Makefile for the chemical-mime-data project.
#
# Copyright (C) 2004-2007 by Daniel Leidert <daniel.leidert@wgdd.de>.
#
# This file is free software. The copyright owner gives unlimited
# permission to copy, distribute and modify it.

MAINTAINERCLEANFILES = Makefile.in


if BOOL_PIXMAPS
pixmapsdir   = $(with_pixmaps)
dist_pixmaps_DATA = gnome-mime-chemical.png chemistry.png
endif #BOOL_PIXMAPS

